# KIP

./: kip_stage2_bgad.py  kip_train.py  pyproject.toml  requirements-dev.txt
docs/: BUILD_PLAN.md  REPRODUKTION.md
kip/: __init__.py  config.py  hardware.py
kip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kip/metrics/: __init__.py  anomaly.py  detection.py
kip/reporting/: __init__.py  results_io.py
kip/stage1/: __init__.py  crop.py  evaluator.py  mask2former_trainer.py  yolo_trainer.py
kip/stage2/: __init__.py  autoencoder.py  base.py  padim.py  patchcore.py  runner.py  unet.py
notebooks/: kip_inspection.ipynb
results/: ergebnisse_analyse.txt  ergebnisse_analyse_ap3_defekterkennung.txt  ergebnisse_analyse_modellvergleich.txt
results/component_benchmark/: summary.csv
results/component_benchmark/mask2former_augoff_20260706_211132/: config.yaml
results/component_benchmark/yolo_augon_20260706_210225/: config.yaml  metrics.json
results/component_benchmark/yolo_augon_20260706_211009/: metrics.json
results/defect_detection/: summary.csv
results/defect_detection/ae_fixed_augoff_seed42_20260707_082154/: config.yaml  metrics.json
results/defect_detection/ae_loto_augoff_seed42_20260707_083742/: config.yaml  (+1 more)
results/results/: eval_real_v3_test.yaml  exp_metrics.json
results/stage2_bgad/: metrics.json
scripts/: build_manifest.py  make_figures.py  prepare_stage1_coco.py  run_stage1.py  run_stage2.py  smoke_all.sh
tests/: conftest.py  test_manifest.py  test_metrics.py  test_splits.py  test_stage2_contract.py  test_tiling.py  test_yolo_to_coco.py
(+27 files in other folders)
