[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kip"
version = "0.1.0"
description = "KIP — Visual Inspection Benchmark: Stage-1 (detection) + Stage-2 (anomaly)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "numpy>=1.26,<3",
    "pandas>=2.2",
    "opencv-python>=4.9",
    "albumentations>=1.4",
    "Pillow>=10.0",
    "scikit-learn>=1.5",
    "scikit-image>=0.25",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "pycocotools>=2.0.8",
    "ultralytics>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kip*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
